# toy-sim

./: Cargo.toml
assets/parts/: cube.part.toml  dummy.part.toml
assets/stars/: sol.star.toml  taale.star.toml
assets/vessels/: dummy.vessel.toml
src/: assets.rs  camera.rs  game_logic.rs  gui.rs  main.rs  orrery.rs  physics.rs  precision.rs  vessel.rs
src/gui/: hud.rs
src/orrery/: orrery_cfg.rs  solver.rs
src/physics/: aerodynamics.rs  docking.rs
src/physics/aerodynamics/: aero_env.rs  aero_model.rs
src/vessel/: README.md  consumable.rs  controls.rs  part_cfg.rs  spawn.rs  vessel_cfg.rs
src/vessel/controls/: fbw.rs
src/vessel/modules/: mod.rs  reactor.rs  thruster.rs  torquer.rs
