[package]
name = "toy-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
anyhow = "1.0.98"
bevy = { version = "0.16.1", features = [
    "wayland",
    "file_watcher",
    "embedded_watcher",
    "jpeg",
] }

bevy_asset_loader = "0.23.0"
bevy_egui = "0.36"
#bevy_framepace = "0.19.1"
#bevy_transform_interpolation = "0.2.0"
egui_flex = "0.4.0"
hifitime = "4.1.2"
kiddo = "5.2.2"
ordered-float = "5.0.0"

rand = "0.9.1"
rand_chacha = "0.9.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_yml = "0.0.12"
smol_str = { version = "0.3.2", features = ["serde"] }
toml = "0.9.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
